--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "start": "cd ./client && tsc --noStrictGenericChecks && node ../server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "6.7.0",
+    "npm": "5.3.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
